--- a/src/components/TickerInput/TickerInput.module.css
+++ b/src/components/TickerInput/TickerInput.module.css
@@ -1,6 +1,6 @@
 .searchInput {
   display: block;
-  width: 300px;
+  width: 100%;
   height: 30px;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -8,6 +8,7 @@
   box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
   transition: all 0.3s ease;
   padding: 2px 10px;
+  margin-right: 5px
 }
 
 .searchInput:focus {
@@ -39,5 +40,12 @@
 }
 
 .label {
-  margin-right: 10px;
+  margin-right: 2px;
+}
+
+.searchInput.ticker {
+  width: 200px
+}
+.searchInput.startDate,.searchInput.endDate {
+  width: 120px
 }
