--- a/src/components/TickerInput/TickerInput.module.css
+++ b/src/components/TickerInput/TickerInput.module.css
@@ -1,3 +1,21 @@
+.searchContainer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 40px;
+}
+
+.label {
+  margin-right: 2px;
+  display: flex;
+  align-items: center;
+}
+
+.inputContainer {
+  position: relative;
+  margin-bottom: 0;
+}
+
 .searchInput {
   display: block;
   width: 100%;
@@ -8,7 +26,7 @@
   box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
   transition: all 0.3s ease;
   padding: 2px 10px;
-  margin-right: 5px
+  margin-right: 5px;
 }
 
 .searchInput:focus {
@@ -17,8 +35,8 @@
 }
 
 .searchButton {
-  display: inline-block;
-  margin-left: 10px;
+  display: flex;
+  align-items: center;
   padding: 10px 20px;
   background-color: #007bff;
   color: white;
@@ -32,20 +50,22 @@
   background-color: #0056b3;
 }
 
-.searchContainer {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 40px;
-}
-
-.label {
-  margin-right: 2px;
-}
-
 .searchInput.ticker {
-  width: 200px
+  width: 200px;
 }
-.searchInput.startDate,.searchInput.endDate {
-  width: 120px
+
+.searchInput.startDate,
+.searchInput.endDate {
+  width: 120px;
 }
+
+.errorMessage {
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  color: red;
+  font-size: 12px;
+  width: 100%;
+  text-align: left;
+}
+
